maybe fixed AudioContext issues on Firefox

--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,24 @@ html,body,#root{
   background: #00ffff;
 }
   
+.pointerlock-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none; /* Prevent blocking interactions with the canvas */
+  z-index: 9999;
+  font-size: 18px;
+  color: white;
+  font-family: Arial, sans-serif;
+}
+
+.pointerlock-overlay p {
+  text-align: center;
+  margin: 0;
+}
